all adjsut
